--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -5,7 +5,9 @@
     --Desaturated-Dark-Blue: hsl(214, 17%, 51%);
     --Grayish-Blue: hsl(212, 23%, 69%);
     --Light-Grayish-Blue: hsl(210, 46%, 95%);
-
+    --White: hsl(0, 0%, 100%);
+    --Light-Grey: hsl(217, 12%, 63%);
+    --Button-hover: hsl(281, 86%, 55%);
 }
 
 html {
@@ -153,6 +155,21 @@ footer {
 }
 
 
+.attribution {
+    font-size: 1.5rem;
+    color: var(--White);
+}
+
+.attribution>a {
+    color: var(--Very-Dark-Grayish-Blue);
+    font-family: "Times New Roman";
+    font-weight: 500;
+}
+
+.attribution>a:visited {
+    color: var(--Very-Dark-Grayish-Blue);
+}
+
 @media only screen and (min-width:700px) {
 
     .card {
@@ -207,6 +224,10 @@ footer {
         #svg>path {
             fill: white;
         }
+    }
+
+    .attribution>a:hover {
+        color: var(--Button-hover);
     }
 
 }
